3.2.5 (2016-12-DD)
------------------

New features
 - [web] download attachments of a message as a zip archive

Enhancements
 - [web] prevent using localhost on additional IMAP accounts

Bug fixes
 - [web] fixed confusion between owner and active user in ACLs management of Administration module
 - [web] fixed JavaScript exception after renaming an address book
 - [web] fixed Sieve folder encoding support (#3904)
 - [web] fixed ordering of calendars when renaming or adding a calendar (#3931)
 - [web] use the organizer's alarm by default when accepting IMIP messages (#3934)
 - [web] switch on "Remember username" when cookie username is set
 - [eas] properly skip folders we don't want to synchronize (#3943)

3.2.4 (2016-12-01)
------------------

New features
 - [core] new sogo-tool cleanup user feature

Enhancements
 - [core] added handling of BYSETPOS for BYDAY in recurrence rules
 - [web] added sort by start date for tasks (#3840)

Bug fixes
 - [web] fixed JavaScript exception when SOGo is launched from an external link (#3900)
 - [web] restored fetching of freebusy information of MS Exchange contacts
 - [web] fixed mail attribute when importing an LDIF file (#3878)
 - [web] don't save empty custom auto-reply subject
 - [web] fixed detection of session expiration
 - [eas] properly escape all GAL responses (#3923)

3.2.3 (2016-11-25)
------------------

New features
 - [core] added photo support for LDAP-based address books (#747, #2184)

Enhancements
 - [web] updated CKEditor to version 4.6.0
 - [web] updated Angular to version 1.5.9

Bug fixes
 - [web] restore attributes when rewriting base64-encoded img tags (#3814)
 - [web] improve alarms dialog (#3909)
 - [eas] fixed EAS delete operation

3.2.2 (2016-11-23)
------------------

New features
 - [core] support repetitive email alarms on tasks and events (#1053)
 - [web] allow to hide center column on large screens (#3861)
 - [eas] relaxed permission requirements for subscription synchronizations (#3118, #3180)
